completed 1st draft of compare page, updated index with new thumbnails and ordering, introduced linking from bsp to bsp-compare pages

--- a/index.html
+++ b/index.html
@@ -149,26 +149,27 @@
 
 
         <div class="project-container">
-        <div class="project-box1">
-          <a
-            href="https://delightful-chebakia-c33eda.netlify.app/gallery/chronicle.html"
-            class="gallery-anchor">
-             <img class="project" src="images/sfchronicle/thumbnail.png" />
-            <!-- <div class="text-break"></div>
-            <h1>San Francisco Chronicle 🔐</h1> -->
-            <div class="text-break"></div>
-            <h4 style="color: #363636">San Francisco Chronicle</h4>
-
-            <h4>Digital news product</h4>
-            <!-- <h4>Internship · Product Design · Mobile Design · Prototyping</h4> -->
-          </a>
-        </div>
+          <div class="project-box1">
+            <a
+              href="gallery/bestsummerprograms-compare.html"
+              class="gallery-anchor">
+               <img class="project" src="images/bsp-compare/thumbnail.png" />
+              <!-- <div class="text-break"></div>
+              <h1>San Francisco Chronicle 🔐</h1> -->
+              <div class="text-break"></div>
+              <h4 style="color: #363636">Program Comparison</h4>
+  
+              <h4>BestSummerPrograms </h4>
+              <!-- <h4>Internship · Product Design · Mobile Design · Prototyping</h4> -->
+            </a>
+          </div>
+      
         <div class="project-box2">
           <a
             href="gallery/atlas.html"
             class="gallery-anchor"
           >
-           <img class="project" src="images/atlas/atlas-v2.png" />
+           <img class="project" src="images/atlas/thumbnail.png" />
 
 
             <div class="text-break"></div>
@@ -178,34 +179,48 @@
           </a>
         </div>
         <div class="project-box3">
-           <a href="gallery/a0.html" class="gallery-anchor">
-            <img
-              class="project"
-              src="images/a0/thumbnail_1.png"
-            />
+          <a
+            href="https://delightful-chebakia-c33eda.netlify.app/gallery/chronicle.html"
+            class="gallery-anchor">
+             <img class="project" src="images/sfchronicle/thumbnail.png" />
+            <!-- <div class="text-break"></div>
+            <h1>San Francisco Chronicle 🔐</h1> -->
             <div class="text-break"></div>
-            <h4 style="color: #363636">a0.dev</h4>
+            <h4 style="color: #363636">San Francisco Chronicle</h4>
 
-            <h4>AI-powered app builder</h4>
+            <h4>Digital news product </h4>
+            <!-- <h4>Internship · Product Design · Mobile Design · Prototyping</h4> -->
           </a>
         </div>
       </div>
       
       <div class="project-container">
         <div class="project-box1">
+          <a href="gallery/a0.html" class="gallery-anchor">
+           <img
+             class="project"
+             src="images/a0/thumbnail_1.png"
+           />
+           <div class="text-break"></div>
+           <h4 style="color: #363636">a0.dev</h4>
+
+           <h4>AI-powered app builder</h4>
+         </a>
+       </div>
+        <div class="project-box2">
            <a href="gallery/bestsummerprograms.html" class="gallery-anchor">
-            <img class="project" src="images/bsp/thumbnail_4.png" />
+            <img class="project" src="images/bsp/thumbnail.png" />
             <div class="text-break"></div>
             <h4 style="color: #363636">BestSummerPrograms</h4>
 
             <h4>Education discovery platform</h4>
           </a>
         </div>
-        <div class="project-box2">
+        <div class="project-box3">
             <a href="#" class="gallery-anchor">
             <img
               class="project"
-              src="images/lorebot/thumbnail_1.png"
+              src="images/lorebot/thumbnail.png"
             />
             <div class="text-break"></div>
             <h4 style="color: #363636">Lorebot (coming soon) </h4>
@@ -213,7 +228,7 @@
             <h4>Live-stream AI tool </h4>
           </a>
         </div>
-         <div class="project-box3">
+         <!-- <div class="project-box3">
            <a href="https://www.sfchronicle.com/projects/2025/heklina-drag-closet/" target="_blank" class="gallery-anchor">
             <img class="project" src="images/heklina/thumbnail.png" />
             <div class="text-break"></div>
@@ -221,7 +236,7 @@
 
             <h4>Editorial design · SF Chronicle</h4>
           </a>
-        </div>
+        </div> -->
       </div>
 
 
